--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<link rel="stylesheet" href="carambolas.css"/>
+<link rel="stylesheet" href="app.css"/>
 
 </head>
 
@@ -15,6 +15,6 @@
 
 </body>
 
-<script src="taquarajara.js"></script>
+<script src="app.js"></script>
 
 </html>
